overlapping solved

--- a/css/global.css
+++ b/css/global.css
@@ -4390,6 +4390,10 @@ main {
     .siteFooter__nav{
         padding-top: 30px;
         margin-left: -110px;
+        margin-top: -100px;
+    }
+    .siteFooter__flexChild--artist {
+        margin-top: -50px;
     }
 }
 
